# anibridge-docs

./: README.md  pyproject.toml  zensical.toml
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml
docs/: configuration.md  faq.md  index.md  v2-breaking-changes.md
docs/assets/css/: htpasswd-generator.css  oauth-modal.css
docs/assets/js/: htpasswd-generator.js
docs/assets/js/oauth/: anilist.js  mal.js  oauth-modal.js
docs/assets/snippets/: compose.yaml  config.yaml  mappings.json  mappings.yaml
docs/getting-started/: docker.md  source.md
docs/mappings/: custom-mappings.md  mappings-api.md  mappings-querying-language.md
docs/providers/: third-party-providers.md
docs/providers/list/: anilist.md  mal.md
docs/recovery/: disaster-recovery.md
docs/web/: api.md  backups.md  logs.md  mappings.md  screenshots.md  timeline.md
