[project]
name = "anibridge-docs"
version = "0.1.0"
description = "Documentation for the AniBridge project."
readme = "README.md"
requires-python = ">=3.14"

authors = [
  { name = "Elias Benbourenane", email = "eliasbenbourenane@gmail.com" },
]
maintainers = [
  { name = "Elias Benbourenane", email = "eliasbenbourenane@gmail.com" },
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "anibridge-library-base>=0.2.0b1",
  "anibridge-list-base>=0.2.0b1",
  "mkdocstrings-python>=2.0.1",
  "zensical>=0.0.20",
]
